# demo001

./: DEPLOYMENT.md  Dockerfile  ENV_VARIABLES.txt  QUICK_DEPLOY.md  README.md  SESSION_GUIDE.md  app.json  config.py  docker-compose.yml  generate_session.py  koyeb.yaml  main (1).py  main.py  pyproject.toml  render.yaml  replit.md  requirements-build.txt  requirements-koyeb.txt  requirements.txt  startup.py
attached_assets/: Pasted-Build-ready-to-start-Cloning-github-com-The-Nexus01-nexus-demo-git-commit-sha-25f48320f7aeed69-1751015918219_1751015918223.txt
bot/: __init__.py  client.py  logger.py  setup.py
utils/: __init__.py  session_validator.py
