[project]
name = "nexus-userbot"
version = "2.0.0"
description = "Nexus v2.0 - Advanced Telegram Userbot with Session String Authentication"
authors = [
    {name = "The Nexus Team", email = "nexus@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["telegram", "userbot", "pyrogram", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.5",
    "pillow>=10.0.0",
    "psutil>=5.9.5",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tgcrypto>=1.2.5",
]
